libs/extractor/src/snapshots/extractor__tests__vanilla_extract_theme-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"theme-contract.css.ts\",\nr#\"import { createThemeContract, createTheme, style } from '@devup-ui/react'\nconst vars = createThemeContract({\n  color: {\n    brand: null,\n    text: null\n  }\n})\nexport const lightTheme = createTheme(vars, {\n  color: {\n    brand: 'blue',\n    text: 'black'\n  }\n})\nexport const darkTheme = createTheme(vars, {\n  color: {\n    brand: 'lightblue',\n    text: 'white'\n  }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--color-brand-0-0",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-2",
                        "theme-contract.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--color-brand-0-0",
                value: "lightblue",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-3",
                        "theme-contract.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--color-text-0-1",
                value: "black",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-2",
                        "theme-contract.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--color-text-0-1",
                value: "white",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-3",
                        "theme-contract.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\n;\n;\nexport const lightTheme = \"theme-0-2\";\nexport const darkTheme = \"theme-0-3\";\n",
}
