libs/extractor/src/snapshots/extractor__tests__vanilla_extract_theme_array_destructure.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"theme-array.css.ts\",\nr#\"import { createTheme, style } from '@devup-ui/react'\nexport const [themeClass, themeVars] = createTheme({\n  colors: { primary: 'blue', secondary: 'green' },\n  spacing: { small: '4px', medium: '8px' }\n})\nexport const themed = style({ color: themeVars.colors.primary })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--colors-primary-0-1",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-0",
                        "theme-array.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--colors-secondary-0-2",
                value: "green",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-0",
                        "theme-array.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--spacing-medium-0-4",
                value: "8px",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-0",
                        "theme-array.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--spacing-small-0-3",
                value: "4px",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-0",
                        "theme-array.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "var(--colors-primary-0-1)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const themed = \"a\";\n;\nexport const themeClass = \"theme-0-0\";\nexport const themeVars = {\n\t\"colors\": {\n\t\t\"primary\": \"var(--colors-primary-0-1)\",\n\t\t\"secondary\": \"var(--colors-secondary-0-2)\"\n\t},\n\t\"spacing\": {\n\t\t\"small\": \"var(--spacing-small-0-3)\",\n\t\t\"medium\": \"var(--spacing-medium-0-4)\"\n\t}\n};\n",
}
