libs/extractor/src/snapshots/extractor__tests__vanilla_extract_theme_vars_name_only.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"theme-vars-name.css.ts\",\nr#\"import { createTheme } from '@devup-ui/react'\nexport const myTheme = createTheme({\n  color: { primary: 'blue' }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--color-primary-0-1",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-0",
                        "theme-vars-name.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\n;\nexport const myTheme = [\"theme-0-0\", { \"color\": { \"primary\": \"var(--color-primary-0-1)\" } }];\n",
}
