libs/extractor/src/snapshots/extractor__tests__vanilla_extract_theme_with_vars.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"theme-vars.css.ts\",\nr#\"import { createTheme } from '@devup-ui/react'\nexport const [lightTheme, vars] = createTheme({\n  color: {\n    primary: 'blue',\n    secondary: 'green'\n  },\n  space: {\n    small: '4px',\n    medium: '8px'\n  }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--color-primary-0-1",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-0",
                        "theme-vars.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--color-secondary-0-2",
                value: "green",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-0",
                        "theme-vars.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--space-medium-0-4",
                value: "8px",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-0",
                        "theme-vars.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--space-small-0-3",
                value: "4px",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-0",
                        "theme-vars.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\n;\nexport const lightTheme = \"theme-0-0\";\nexport const vars = {\n\t\"color\": {\n\t\t\"primary\": \"var(--color-primary-0-1)\",\n\t\t\"secondary\": \"var(--color-secondary-0-2)\"\n\t},\n\t\"space\": {\n\t\t\"small\": \"var(--space-small-0-3)\",\n\t\t\"medium\": \"var(--space-medium-0-4)\"\n\t}\n};\n",
}
