libs/extractor/src/snapshots/extractor__tests__vanilla_extract_vars_only.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"vars-only.css.ts\",\nr\"import { createVar, style, fallbackVar } from '@devup-ui/react'\nexport const colorVar = createVar()\nexport const sizeVar = createVar()\nexport const box = style({\n  color: fallbackVar(colorVar, 'blue'),\n  fontSize: sizeVar\n})\n\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "var(--var-0-0,blue)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-size",
                value: "var(--var-0-1)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const box = \"f0_0 a b\";\nexport const colorVar = \"var(--var-0-0)\";\nexport const sizeVar = \"var(--var-0-1)\";\n",
}
