libs/extractor/src/snapshots/extractor__tests__vanilla_extract_with_computed.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"computed.css.ts\",\nr#\"import { style } from '@devup-ui/react'\nconst base = 8;\nexport const box = style({ padding: base * 2, margin: base / 2 })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "16px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const box = \"a b\";\n",
}
