libs/extractor/src/snapshots/extractor__tests__vanilla_extract_with_keyframes_and_global-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"global.css.ts\",\nr#\"import { globalStyle } from '@devup-ui/react'\nglobalStyle(\"body\", { margin: 0, padding: 0 })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "import { globalStyle } from \"@devup-ui/react\";\nglobalStyle(\"body\", {\n\tmargin: 0,\n\tpadding: 0\n});\n",
}
